test-suite/typecheck/fail/missing_interface_impl.first
import * "Prelude"
interface Show<T> { show: function(T) -> String; }
function f(x: Int) -> String {
  return x.show();
}
